--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <title>Srinivas Jayaram | Millennium | University of Oxford</title>
+    <meta name="title" content="Srinivas Jayaram | Millennium | University of Oxford">
+    <meta name="description" content="Software Engineer at a Hedge fund with Masters at Oxford University">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:title" content="Srinivas Jayaram | Millennium | University of Oxford">
+    <meta property="og:description" content="Software Engineer at a Hedge fund with Masters at Oxford University">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://developerfolio.js.org/">
-    <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="twitter:title" content="Srinivas Jayaram | Millennium | University of Oxford">
+    <meta property="twitter:description" content="Software Engineer at a Hedge fund with Masters at Oxford University">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
